--- a/app/src/main/res/layout/item_content_date.xml
+++ b/app/src/main/res/layout/item_content_date.xml
@@ -15,7 +15,7 @@
     limitations under the License.
 -->
 <com.cnk24.mediaalbum.widget.SquareRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/MediaAlbum.MatchParent">
+    style="@style/MediaAlbum.WrapContent">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
