--- a/app/src/main/res/layout/item_content_list.xml
+++ b/app/src/main/res/layout/item_content_list.xml
@@ -32,29 +32,18 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_date"
+                android:id="@+id/itemTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
         </LinearLayout>
 
-
     </android.support.v7.widget.CardView>
 
-
-    <!--TextView
-        android:id="@+id/tv_date"
-        style="@style/MediaAlbum.WrapContent"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/album_dp_6"
-        android:layout_marginLeft="@dimen/album_dp_6"
-        android:layout_marginStart="@dimen/album_dp_6"
-        android:drawableLeft="@drawable/tag_video_white"
-        android:drawablePadding="@dimen/album_dp_4"
-        android:drawableStart="@drawable/tag_video_white"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@color/albumFontLight" /-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_list"
+        style="@style/MediaAlbum.WrapContent.WidthMatchParent"
+        android:layout_marginTop="@dimen/album_dp_10" />
 
 </com.cnk24.mediaalbum.widget.SquareRelativeLayout>
