--- a/app/src/main/res/layout/item_content_list.xml
+++ b/app/src/main/res/layout/item_content_list.xml
@@ -14,7 +14,29 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<com.cnk24.mediaalbum.widget.SquareRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/MediaAlbum.MatchParent"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <TextView
+        android:id="@+id/itemTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/album_dp_10" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_list"
+        style="@style/MediaAlbum.WrapContent.WidthMatchParent"
+        android:layout_marginTop="@dimen/album_dp_10" />
+
+</LinearLayout>
+
+
+
+
+<!--com.cnk24.mediaalbum.widget.SquareRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/MediaAlbum.WrapContent">
 
     <android.support.v7.widget.CardView
@@ -37,13 +59,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"/>
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_list"
+                style="@style/MediaAlbum.WrapContent.WidthMatchParent"
+                android:layout_marginTop="@dimen/album_dp_10" />
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_list"
-        style="@style/MediaAlbum.WrapContent.WidthMatchParent"
-        android:layout_marginTop="@dimen/album_dp_10" />
-
-</com.cnk24.mediaalbum.widget.SquareRelativeLayout>
+</com.cnk24.mediaalbum.widget.SquareRelativeLayout-->
