--- a/app/src/main/res/layout/dialog_help.xml
+++ b/app/src/main/res/layout/dialog_help.xml
@@ -27,7 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:layout_marginTop="@dimen/album_dp_6"
+        android:layout_marginTop="@dimen/album_dp_10"
+        android:layout_marginBottom="@dimen/album_dp_10"
         android:text="@string/help"/>
 
     <CheckBox
