--- a/mediaalbum/src/main/res/layout/album_activity_gallery.xml
+++ b/mediaalbum/src/main/res/layout/album_activity_gallery.xml
@@ -28,6 +28,7 @@
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_layout"
+            android:background="#3B000000"
             style="@style/MediaAlbum.AppBar.General.Transparent">
 
             <android.support.v7.widget.Toolbar
@@ -84,6 +85,7 @@
                     android:textSize="@dimen/album_sp_18" />
             </FrameLayout>
         </FrameLayout>
+
     </RelativeLayout>
 
 </FrameLayout>
